@@ -613,6 +613,8 @@ Other memory:
 
 0.2.8 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* tools/Makefile.mkconfig: Under Cygwin, executable has a different name
+	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
 	* Started m68322
 </pre></ul>
 
