@@ -169,7 +169,7 @@
 	* Restructured some Makefiles to better handle enabling and disabling
 	  NuttX features without having so much conditional compilation in the
 	  source files.
-	* tools/mkconfig.c: No long depends on asprintf() and _GNU_SOURCE and
+	* tools/mkconfig.c: No longer depends on asprintf() and _GNU_SOURCE and
 	  so should now build in non-GNU, non-GLIBC environments.
 	* include/nuttx/compiler.h: Fix for using SDCC with the Z80.
 	* include/assert.h & arch/pjrc-8051/src/up_assert.c: SDCC does support
@@ -178,5 +178,7 @@
 	  disabled.
 
 0.2.8 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
+	* tools/Makefile.mkconfig: Under Cygwin, executable has a different name
+	* tools/mkdeps.sh & arch/arm/src/Makefile: Corrected a problem makeing dependencies
 	* Started m68322
 
